--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -3,13 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:Chat"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="Views/LoginWindow.xaml">
     <Application.Resources>
         <ResourceDictionary Source="ResourcesDictionaries/MainInfo.xaml">
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ResourcesDictionaries/Themes/DarkTheme.xaml" />
+                <ResourceDictionary Source="Styles/TitleBarButtonStyle.xaml" />
+                <ResourceDictionary Source="Styles/WindowStyle.xaml" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-        
     </Application.Resources>
 </Application>
