--- a/Chat/Views/LoginWindow.xaml
+++ b/Chat/Views/LoginWindow.xaml
@@ -23,10 +23,9 @@
             <TextBlock Margin="20" Foreground="White" HorizontalAlignment="Center" FontSize="48">Sign in</TextBlock>
             <svgc:SvgViewbox Source="Images/logo.svg" MaxHeight="90"/>
 
-
             <Grid Margin="0,20">
                 <Border Margin="0, 20" CornerRadius="12" BorderThickness="2" BorderBrush="{StaticResource LoginWindowBorderBrush}">
-                    <Rectangle Fill="#161b22"  Height="320" Width="500" RadiusX="12" RadiusY="12"/>
+                    <Rectangle Fill="#161b22" Height="320" Width="500" RadiusX="12" RadiusY="12"/>
                 </Border>
 
                 <StackPanel Margin="30">
@@ -34,13 +33,28 @@
                     <ui:TextBox Margin="0, 12" Foreground="White" FontSize="18" Background="{StaticResource MainBackground}" BorderBrush="{StaticResource LoginWindowBorderBrush}" />
 
                     <TextBlock Margin="0, 12" Foreground="White" FontSize="24" HorizontalAlignment="Left">Password</TextBlock>
-                    <PasswordBox Foreground="White" Background="#0d1117" FontSize="18" BorderBrush="{StaticResource LoginWindowBorderBrush}" BorderThickness="1"/>
+                    <userControls:ClearablePasswordBox Foreground="White" FontSize="18" Background="{StaticResource MainBackground}" BorderBrush="{StaticResource LoginWindowBorderBrush}"/>
 
                     <ui:Button HorizontalAlignment="Stretch" Background="Green" Appearance="Success" Foreground="White" BorderBrush="{StaticResource LoginWindowBorderBrush}" Margin="0, 35, 0, 0">
                         <TextBlock FontSize="20" Text="Sign in"/>
                     </ui:Button>
                 </StackPanel>
             </Grid>
+
+            <!--<Grid>
+                <Border CornerRadius="12" BorderThickness="2" BorderBrush="{StaticResource LoginWindowBorderBrush}">
+                    <Rectangle Fill="Transparent"  Height="120" Width="500" RadiusX="12" RadiusY="12"/>
+                </Border>
+                
+                <StackPanel Margin="12" Orientation="Vertical">
+                    <ui:Button HorizontalAlignment="Center" Appearance="Dark"  Background="Transparent">
+                        <TextBlock FontSize="22" Foreground="#3a93f8" Text="Forgot password?"/>
+                    </ui:Button>
+                    <ui:Button Margin="0,5" HorizontalAlignment="Center" Appearance="Dark"  Background="Transparent">
+                        <TextBlock FontSize="22" Foreground="#3a93f8" Text="Create an account"/>
+                    </ui:Button>
+                </StackPanel>
+            </Grid>-->
 
         </StackPanel>
     </Grid>
