--- a/Chat/UserControls/TitleBar.xaml
+++ b/Chat/UserControls/TitleBar.xaml
@@ -8,28 +8,28 @@
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="800">
     
-    <Grid Background="{StaticResource TitleBarBackground}">
+    <Grid x:Name="TitleBarGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="40"/>
-            <ColumnDefinition Width="40"/>
-            <ColumnDefinition Width="40"/>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
 
         <Button Grid.Column="1" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonMinimize" Click="buttonMinimize_Click">
-            <ui:SymbolIcon Symbol="Subtract24"/>
+            <ui:SymbolIcon x:Name="buttonMinimizeIcon" Symbol="Subtract24"/>
         </Button>
 
         <Button Grid.Column="2" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonMaximize" Click="buttonMaximize_Click">
-            <ui:SymbolIcon Symbol="Maximize16"/>
+            <ui:SymbolIcon x:Name="buttonMazimizeIcon" Symbol="Maximize16"/>
         </Button>
 
         <Button Grid.Column="2" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonRestore" Click="buttonMaximize_Click">
-            <ui:SymbolIcon Symbol="SquareMultiple24"/>
+            <ui:SymbolIcon x:Name="buttonRestoreIcon" Symbol="SquareMultiple24"/>
         </Button>
 
         <Button Grid.Column="3" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonClose" Click="buttonClose_Click">
-            <ui:SymbolIcon Symbol="Dismiss16"/>
+            <ui:SymbolIcon x:Name="buttonCloseIcon" Symbol="Dismiss16"/>
         </Button>
     </Grid>
 </UserControl>
