--- a/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
+++ b/Chat/ResourcesDictionaries/Themes/DarkTheme.xaml
@@ -3,6 +3,8 @@
     
     <!--Global-->
     <SolidColorBrush x:Key="MainBackground">#0d1117</SolidColorBrush>
+    <SolidColorBrush x:Key="SecondaryBackground">#161b22</SolidColorBrush>
+    <SolidColorBrush x:Key="MainForeground">#FFFFFF</SolidColorBrush>
     
     <!--TitleBar-->
     <SolidColorBrush x:Key="TitleBarBackground">#242f3d</SolidColorBrush>
