--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -3,15 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:Chat"
-             StartupUri="Views/LoginWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
+    
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                
+                <!--Themes-->
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/DarkTheme.xaml" />
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/CommonTheme.xaml" />
+                
+                <!--styles-->
                 <ResourceDictionary Source="Styles/TitleBarButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/WindowStyle.xaml" />
+                
+                <!--from NuGet-->
                 <ui:ControlsDictionary />
+                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
