temp.2.1. addition of test RegistrationTabItem

--- a/Chat/Views/MainWindow.xaml
+++ b/Chat/Views/MainWindow.xaml
@@ -32,6 +32,7 @@
             </TabControl.Resources>
 
             <tabItems:LoginTabItem Style="{StaticResource HiddenControl}" IsSelected="True"/>
+            <tabItems:RegistrationTabItem Style="{StaticResource HiddenControl}"/>
         </TabControl>
     </Grid>
     
