--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:Chat"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="MVVM/Views/MainWindow.xaml">
     
     <Application.Resources>
         <ResourceDictionary>
