--- a/Chat/MVVM/Views/TabItems/LoginTabItem.xaml
+++ b/Chat/MVVM/Views/TabItems/LoginTabItem.xaml
@@ -1,16 +1,16 @@
-﻿<TabItem x:Class="Chat.Views.TabItems.LoginTabItem"
+﻿<TabItem x:Class="Chat.MVVM.Views.TabItems.LoginTabItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Chat.Views.TabItems"
+             xmlns:local="clr-namespace:Chat.MVVM.Views.TabItems"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
-             xmlns:userControls="clr-namespace:Chat.Views.UserControls"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Header="Login">
-    
+
     <Grid Background="{StaticResource MainBackground}">
 
         <Grid.Resources>
