--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -1,14 +1,13 @@
-﻿<TabItem x:Class="Chat.MVVM.Views.TabItems.RegistrationTabItem"
+﻿<UserControl x:Class="Chat.MVVM.Views.RegistrationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Chat.MVVM.Views.TabItems"
+             xmlns:local="clr-namespace:Chat.MVVM.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
     <Grid>
         <Label Content="registr" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" Foreground="White"/>
         <Button Background="Tomato" Width="300" Height="120"/>
     </Grid>
-</TabItem>
+</UserControl>
