--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:Chat"
-             StartupUri="MVVM/Views/MainWindow.xaml">
-    
+             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels"
+             xmlns:views="clr-namespace:Chat.MVVM.Views">
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                
                 <!--Themes-->
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/DarkTheme.xaml" />
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/CommonTheme.xaml" />
@@ -19,6 +19,16 @@
                 
                 <!--from NuGet-->
                 <ui:ControlsDictionary />
+
+                <ResourceDictionary>
+                    <DataTemplate DataType="{x:Type TypeName=viewModels:LoginViewModel}">
+                        <views:LoginView/>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type TypeName=viewModels:RegistrationViewModel}">
+                        <views:RegistrationView/>
+                    </DataTemplate>
+                </ResourceDictionary>
                 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
