--- a/Chat/MVVM/Views/MainWindow.xaml
+++ b/Chat/MVVM/Views/MainWindow.xaml
@@ -20,6 +20,10 @@
         <userControls:TitleBar Grid.Row="0" 
                        Background="Transparent" ButtonsForeground="White">
         </userControls:TitleBar>
+        
+        <ContentControl Grid.Row="1" Content="{Binding NavigationService.CurrentView}">
+
+        </ContentControl>
     </Grid>
     
 </Window>
