--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -6,9 +6,13 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
-             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
+             xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls" 
+             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type=viewModels:LoginViewModel}"
+             >
+    
     <Grid Background="{StaticResource MainBackground}">
 
         <Grid.Resources>
