--- a/Chat/MVVM/Views/RegistrationView.xaml
+++ b/Chat/MVVM/Views/RegistrationView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views"
+             xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type=viewModels:RegistrationViewModel}"
+             >
+    
     <Grid>
         <Label Content="registr" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" Foreground="White"/>
         <Button Background="Tomato" Width="300" Height="120"/>
