dev.1.24. addition of new UserControl: Logotype

--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -22,7 +22,7 @@
                Text="Sign in">
             </TextBlock>
 
-            <svgc:SvgViewbox Source="Images/logo.svg" Height="80"/>
+            <userControls:Logotype Height="80"/>
 
             <Grid Margin="0,30" Width="400">
 
