--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -6,9 +6,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="root"
+             >
 
-    <Grid x:Name="PassBoxGrid" Background="Transparent" 
+    <Grid Background="Transparent" 
           GotFocus="PassBoxGrid_GotFocus" LostFocus="PassBoxGrid_LostFocus">
         
         <Grid.ColumnDefinitions>
@@ -16,16 +18,26 @@
             <ColumnDefinition Width="36"/>
         </Grid.ColumnDefinitions>
 
-        <Border x:Name="PassBoxBorder" Grid.ColumnSpan="2" BorderThickness="1" CornerRadius="3.6">
-            <Rectangle x:Name="PassBoxBackground" RadiusX="3.6" RadiusY="3.6"/>
+        <Border x:Name="PassBoxBorder" Grid.ColumnSpan="2" 
+                BorderThickness="1"
+                BorderBrush="{Binding BorderBrush, ElementName=root}">
+            
+            <Rectangle x:Name="PassBoxBackground"/>
         </Border>
 
-        <PasswordBox x:Name="PassBox" Grid.ColumnSpan="2" CaretBrush="White" 
-                     PasswordChanged="PassBox_PasswordChanged"/>
+        <PasswordBox x:Name="PassBox" Grid.ColumnSpan="2" 
+                     PasswordChanged="PassBox_PasswordChanged"
+                     CaretBrush="{Binding Foreground, ElementName=root}"
+                     Foreground="{Binding Foreground, ElementName=root}"
+                     FontSize="{Binding FontSize, ElementName=root}">
+        </PasswordBox>
 
         <Button x:Name="ClearTextBtn" Grid.Column="1" Visibility="Collapsed" 
                 Click="ClearTextBtn_Click">
-            <ui:SymbolIcon Symbol="Dismiss16" Foreground="White"/>
+
+            <ui:SymbolIcon Symbol="Dismiss16" 
+                           Foreground="{Binding Foreground, ElementName=root}"/>
+            
         </Button>
     </Grid>
 </UserControl>
