--- a/Chat/MVVM/Views/UserControls/FilledRoundedBorder.xaml
+++ b/Chat/MVVM/Views/UserControls/FilledRoundedBorder.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             x:Name="root">
     
-    <Border x:Name="Border">
+    <Border x:Name="Border" 
+            BorderBrush="{Binding BorderBrush, ElementName=root}">
         <Rectangle x:Name="Rect"/>
     </Border>
 </UserControl>
