--- a/Chat/MVVM/Views/UserControls/Logotype.xaml
+++ b/Chat/MVVM/Views/UserControls/Logotype.xaml
@@ -6,8 +6,11 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="root"
+             >
     
-    <svgc:SvgViewbox x:Name="Logo" Source="Images/logo.svg"/>
+    <svgc:SvgViewbox Source="Images/logo.svg" 
+                     Height="{Binding ActualHeight, ElementName=root}"/>
     
 </UserControl>
