dev.1.27. ClearablePasswordBox contains PlaceholderText Property

--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -15,22 +15,24 @@
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition Width="36"/>
+            <ColumnDefinition x:Name="ColumnWithButton" Width="0"/>
         </Grid.ColumnDefinitions>
 
-        <Border x:Name="PassBoxBorder" Grid.ColumnSpan="2" 
-                BorderThickness="1"
+        <Border x:Name="PassBoxBorder" Grid.ColumnSpan="2"
                 BorderBrush="{Binding BorderBrush, ElementName=root}">
             
             <Rectangle x:Name="PassBoxBackground"/>
         </Border>
 
-        <PasswordBox x:Name="PassBox" Grid.ColumnSpan="2" 
+        <PasswordBox x:Name="PassBox" Panel.ZIndex="1"
                      PasswordChanged="PassBox_PasswordChanged"
                      CaretBrush="{Binding Foreground, ElementName=root}"
                      Foreground="{Binding Foreground, ElementName=root}"
-                     FontSize="{Binding FontSize, ElementName=root}">
-        </PasswordBox>
+                     FontSize="{Binding FontSize, ElementName=root}"/>
+
+        <TextBox x:Name="Placehold" Panel.ZIndex="0"
+                 FontSize="{Binding FontSize, ElementName=root}"
+                 Foreground="{Binding Foreground, ElementName=root}" />
 
         <Button x:Name="ClearTextBtn" Grid.Column="1" Visibility="Collapsed" 
                 Click="ClearTextBtn_Click">
