--- a/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearableTextBox.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Chat.MVVM.Views.UserControls.ClearableTextBoxWithPlaceholder"
+﻿<UserControl x:Class="Chat.MVVM.Views.UserControls.ClearableTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
