dev.1.29. UserControls are modified => ClearablePasswordBox and ClearableTextBox can contain PlaceholderText in any size and color

--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -31,6 +31,7 @@
                      FontSize="{Binding FontSize, ElementName=root}"/>
 
         <TextBox x:Name="Placehold" Panel.ZIndex="0"
+                 VerticalAlignment="Center"
                  FontSize="{Binding FontSize, ElementName=root}"
                  Foreground="{Binding Foreground, ElementName=root}" />
 
