dev.1.30. new Style => DefaultTextBoxStyle

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -12,8 +12,9 @@
                 <!--Themes-->
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/DarkTheme.xaml" />
                 <ResourceDictionary Source="ResourcesDictionaries/Themes/CommonTheme.xaml" />
-                
+
                 <!--styles-->
+                <ResourceDictionary Source="Styles/DefaultTextBoxStyle.xaml" />
                 <ResourceDictionary Source="Styles/TitleBarButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/WindowStyle.xaml" />
                 
