dev.1.32. rename and refactor of Styles + refactor of LoginView.xaml

--- a/Chat/MVVM/Views/MainWindow.xaml
+++ b/Chat/MVVM/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         Height="720" Width="1200"
         MinHeight="540" MinWidth="480"
         d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel}"
-        Style="{StaticResource WindowWithoutDefaultStyle}">
+        Style="{StaticResource NonDefaultWindowStyle}">
     
     <Grid Background="{DynamicResource MainBackground}">
         
