--- a/Chat/MVVM/Views/LoginView.xaml
+++ b/Chat/MVVM/Views/LoginView.xaml
@@ -12,83 +12,114 @@
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:LoginViewModel}"
              >
-    
-    <Grid Background="{StaticResource MainBackground}">
 
-        <StackPanel HorizontalAlignment="Center">
+    <StackPanel HorizontalAlignment="Center" 
+                Background="{DynamicResource MainBackground}"
+                Width="400">
 
-            <TextBlock Margin="20" HorizontalAlignment="Center" FontSize="40" 
-               Foreground="{DynamicResource MainForeground}" 
-               Text="Sign in">
-            </TextBlock>
+        <TextBlock Margin="20" 
+                   FontSize="40" 
+                   HorizontalAlignment="Center" 
+                   Foreground="{DynamicResource MainForeground}" 
+                   Text="Sign in"/>
 
-            <userControls:Logotype Height="80"/>
+        <userControls:Logotype Height="80"/>
 
-            <Grid Margin="0,30" Width="400">
+        <Grid Margin="0,30">
 
-                <userControls:FilledRoundedBorder BorderThickness="2" Roundation="12" 
-                                                  BorderBrush="{StaticResource LoginWindowBorderBrush}"
-                                                  Background="{DynamicResource SecondaryBackground}"/>
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"/>
 
-                <StackPanel Margin="24">
+            
+            <StackPanel Margin="24">
+                
+                <StackPanel.Resources>
+                    
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Setter Property="FontSize" Value="20"/>
+                        <Setter Property="Foreground" Value="{DynamicResource MainForeground}"/>
+                    </Style>
+                    
+                </StackPanel.Resources>
 
-                    <TextBlock Margin="3,0" FontSize="20" 
-                       Foreground="{DynamicResource MainForeground}" 
-                       Text="Login">
-                    </TextBlock>
+                
+                <TextBlock Margin="3,0" 
+                           Text="Login"/>
 
-                    <ui:TextBox Margin="0, 10" FontSize="18"
-                        Foreground="{DynamicResource MainForeground}" Background="{DynamicResource MainBackground}" 
-                        BorderBrush="{DynamicResource LoginWindowBorderBrush}">
-                    </ui:TextBox>
+                
+                <userControls:ClearableTextBox Margin="0, 10" 
+                                               Style="{StaticResource EntryWindowsTextBoxStyle}"
+                                               PlaceholderText="Enter login..."/>
 
-                    <TextBlock Margin="3,10" FontSize="20" 
-                       Foreground="{DynamicResource MainForeground}" 
-                       Text="Password">
-                    </TextBlock>
 
-                    <userControls:ClearablePasswordBox FontSize="18" Roundation="3.6"
-                        Foreground="{DynamicResource MainForeground}" Background="{DynamicResource MainBackground}" 
-                        BorderBrush="{DynamicResource LoginWindowBorderBrush}">
-                    </userControls:ClearablePasswordBox>
+                <TextBlock Margin="3,10" 
+                           Text="Password"/>
 
-                    <ui:Button HorizontalAlignment="Stretch" Appearance="Success" Margin="0, 20, 0, 0"
-                       Background="Green" Foreground="{DynamicResource MainForeground}" 
-                       BorderBrush="{DynamicResource LoginWindowBorderBrush}">
+                
+                <userControls:ClearablePasswordBox FontSize="18" 
+                                                   Roundation="3.6" 
+                                                   BorderThickness="1" 
+                                                   BorderBrush="{DynamicResource MainBorderBrush}" 
+                                                   Foreground="{DynamicResource MainForeground}" 
+                                                   Background="{DynamicResource MainBackground}" 
+                                                   PlaceholderText="Enter password..." 
+                                                   PlaceholderForeground="#999999"
+                                                   PlaceholderFontSize="16"/>
 
-                        <TextBlock FontSize="20" Text="Sign in"/>
-                    </ui:Button>
-                </StackPanel>
-            </Grid>
+                
+                <ui:Button Margin="0, 20, 0, 0" 
+                           HorizontalAlignment="Stretch" 
+                           Appearance="Success" 
+                           Background="Green" 
+                           Foreground="{DynamicResource MainForeground}" 
+                           BorderBrush="{DynamicResource MainBorderBrush}">
 
-            <Grid Width="400">
+                    <TextBlock Text="Sign in"/>
+                    
+                </ui:Button>
+                
+            </StackPanel>
+            
+        </Grid>
 
-                <userControls:FilledRoundedBorder BorderThickness="2" Roundation="12" 
-                                  BorderBrush="{StaticResource LoginWindowBorderBrush}"
-                                  Background="Transparent"/>
+        <Grid>
 
-                <StackPanel Margin="16" HorizontalAlignment="Center">
+            <userControls:FilledRoundedBorder Style="{StaticResource EntryWindowsFilledRoundedBorderStyle}"
+                                              Background="Transparent"/>
 
-                    <ui:Button Appearance="Dark" Background="Transparent">
-                        <TextBlock FontSize="20" 
-                           Foreground="{StaticResource HyperlinkForeground}" 
-                           Text="Forgot password?">
-                        </TextBlock>
-                    </ui:Button>
+            
+            <StackPanel Margin="16" 
+                        HorizontalAlignment="Center">
 
-                    <ui:Button Margin="0,6,0,0" Appearance="Dark"  Background="Transparent" 
-                               Command="{Binding NavigateToRegistrationCommand}">
-                        <TextBlock FontSize="20" 
-                           Foreground="{StaticResource HyperlinkForeground}" 
-                           Text="Create an account">
-                        </TextBlock>
-                    </ui:Button>
+                <StackPanel.Resources>
 
-                </StackPanel>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Setter Property="FontSize" Value="20"/>
+                        <Setter Property="Foreground" Value="{StaticResource HyperlinkForeground}"/>
+                    </Style>
+                    
+                </StackPanel.Resources>
+                
 
-            </Grid>
+                <ui:Button Appearance="Dark" 
+                           Background="Transparent">
+                    
+                    <TextBlock Text="Forgot password?"/>
+                    
+                </ui:Button>
+                
 
-        </StackPanel>
+                <ui:Button Margin="0,6,0,0" 
+                           Appearance="Dark"
+                           Background="Transparent"
+                           Command="{Binding NavigateToRegistrationCommand}">
+                    
+                    <TextBlock Text="Create an account"/>
+                    
+                </ui:Button>
 
-    </Grid>
+            </StackPanel>
+
+        </Grid>
+
+    </StackPanel>
 </UserControl>
