--- a/Chat/MVVM/Views/UserControls/TitleBar.xaml
+++ b/Chat/MVVM/Views/UserControls/TitleBar.xaml
@@ -20,20 +20,22 @@
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Column="1" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonMinimize" Click="buttonMinimize_Click">
+        <Button Grid.Column="1" Style="{StaticResource TitleBarButtonStyle}" x:Name="buttonMinimize" Click="buttonMinimize_Click">
             <ui:SymbolIcon x:Name="buttonMinimizeIcon" Symbol="Subtract24"/>
         </Button>
 
-        <Button Grid.Column="2" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonMaximize" Click="buttonMaximize_Click">
+        <Button Grid.Column="2" Style="{StaticResource TitleBarButtonStyle}" x:Name="buttonMaximize" Click="buttonMaximize_Click">
             <ui:SymbolIcon x:Name="buttonMazimizeIcon" Symbol="Maximize16"/>
         </Button>
 
-        <Button Grid.Column="2" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonRestore" Click="buttonMaximize_Click">
+        <Button Grid.Column="2" Style="{StaticResource TitleBarButtonStyle}" x:Name="buttonRestore" Click="buttonMaximize_Click">
             <ui:SymbolIcon x:Name="buttonRestoreIcon" Symbol="SquareMultiple24"/>
         </Button>
 
-        <Button Grid.Column="3" Style="{StaticResource titleBarButtonStyle}" x:Name="buttonClose" Click="buttonClose_Click">
+        <Button Grid.Column="3" Style="{StaticResource TitleBarButtonStyle}" x:Name="buttonClose" Click="buttonClose_Click">
             <ui:SymbolIcon x:Name="buttonCloseIcon" Symbol="Dismiss16"/>
         </Button>
+        
     </Grid>
+    
 </UserControl>
