--- a/Chat/Styles/TitleBarButtonStyle.xaml
+++ b/Chat/Styles/TitleBarButtonStyle.xaml
@@ -1,25 +1,39 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="titleBarButtonStyle"
-       TargetType="{x:Type Button}">
+    
+    <Style x:Key="TitleBarButtonStyle" TargetType="{x:Type Button}">
+        
         <!--Button is available in 32px of WindowChrome-->
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
+        
         <Setter Property="Template">
+            
             <Setter.Value>
+                
                 <ControlTemplate TargetType="{x:Type Button}">
+                    
                     <Border x:Name="border_main" BorderThickness="1" BorderBrush="Transparent" Background="Transparent">
                         <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Content"/>
                     </Border>
+
                     <ControlTemplate.Triggers>
+
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="border_main" Property="Background" Value="{DynamicResource MouseOverTitleBarButtonColor}"/>
                         </Trigger>
+
                         <Trigger Property="IsPressed" Value="True">
                             <Setter TargetName="border_main" Property="Background" Value="{DynamicResource IsPressedTitleBarButtonColor}"/>
                         </Trigger>
+
                     </ControlTemplate.Triggers>
+                    
                 </ControlTemplate>
+                
             </Setter.Value>
+            
         </Setter>
+        
     </Style>
+    
 </ResourceDictionary>
