dev.1.33. refactor of UserControls

--- a/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
+++ b/Chat/MVVM/Views/UserControls/ClearablePasswordBox.xaml
@@ -10,37 +10,49 @@
              x:Name="root"
              >
 
-    <Grid Background="Transparent" 
-          GotFocus="PassBoxGrid_GotFocus" LostFocus="PassBoxGrid_LostFocus">
+    <Grid GotFocus="PassBoxGrid_GotFocus" 
+          LostFocus="PassBoxGrid_LostFocus">
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition x:Name="ColumnWithButton" Width="0"/>
         </Grid.ColumnDefinitions>
+        
 
-        <Border x:Name="PassBoxBorder" Grid.ColumnSpan="2"
+        <Border x:Name="Border" 
+                Grid.ColumnSpan="2"
                 BorderBrush="{Binding BorderBrush, ElementName=root}">
             
             <Rectangle x:Name="PassBoxBackground"/>
+            
         </Border>
 
-        <PasswordBox x:Name="PassBox" Panel.ZIndex="1"
-                     PasswordChanged="PassBox_PasswordChanged"
+        
+        <PasswordBox x:Name="PassBox" 
+                     Panel.ZIndex="1"
                      CaretBrush="{Binding Foreground, ElementName=root}"
                      Foreground="{Binding Foreground, ElementName=root}"
-                     FontSize="{Binding FontSize, ElementName=root}"/>
+                     FontSize="{Binding FontSize, ElementName=root}"
+                     PasswordChanged="PassBox_PasswordChanged"/>
 
-        <TextBox x:Name="Placehold" Panel.ZIndex="0"
+        
+        <TextBox x:Name="Placehold" 
+                 Panel.ZIndex="0"
                  VerticalAlignment="Center"
                  FontSize="{Binding FontSize, ElementName=root}"
-                 Foreground="{Binding Foreground, ElementName=root}" />
+                 Foreground="{Binding Foreground, ElementName=root}"/>
 
-        <Button x:Name="ClearTextBtn" Grid.Column="1" Visibility="Collapsed" 
+        
+        <Button x:Name="ClearTextBtn" 
+                Grid.Column="1" 
+                Visibility="Collapsed" 
                 Click="ClearTextBtn_Click">
 
             <ui:SymbolIcon Symbol="Dismiss16" 
                            Foreground="{Binding Foreground, ElementName=root}"/>
             
         </Button>
+        
     </Grid>
+    
 </UserControl>
